--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,8 @@ h2 {font-size: 1.em; color: #333;}
 p {font-size: 1em; color: #777;}
 
 /*  CABEÇALHO */
+.cabecalho {width: 100%;  float: left; padding: 50px 8%; background-color: #13c7ae;}
+.logo a {width: 221px; height: 48px; float: left; background: url(../img/logo.png) no-repeat; font-size: 0;}
+.cabecalho form {width: 30%; float: right;}
+.cabecalho input {width: 85%; float: left; padding: 15px 10px;} 
+.cabecalho button {width: 15%; float: right; padding:  15px 10px; background-color: #0cae98;; color: #fff ; cursor: pointer;}
