--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,10 @@ p {font-size: 1em; color: #777;}
 .btn-facebook:hover {color:#3b5998}
 .btn-twitter:hover {color: #54a4d6}
 .btn-google:hover {color: #d73d32}
+
+/* PRINCIPAL */
+.principal {width: 100%; float: left; padding: 20px 8px;}
+.sobre {width: 70%; float: left; padding: 0 20px 20px 0;}
+.sobre h2 {margin-bottom: 15px;}
+.sobre img {width: 50%; float: left; border-radius: 5px; margin: 0 15px 15px 0;}
+.sobre p {text-align: justify;}
