--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,9 @@
 /* RESET */
 * { margin: 0; padding: 0; font-size: 100%; font-family: 'Open Sans', sans-serif; font-weight: normal; box-sizing: border-box; border: none; outline: none;}
-
 img {max-width: 100%;}
-
 ul{ list-style: none;}
-
 a {text-decoration: none;}
-
-h2 {font-size: 1.em; color: #333;}
-
+h2 {font-size: 1.5em; color: #333;}
 p {font-size: 1em; color: #777;}
 
 /*  CABEÇALHO */
@@ -37,3 +32,18 @@ p {font-size: 1em; color: #777;}
 .sobre h2 {margin-bottom: 15px;}
 .sobre img {width: 50%; float: left; border-radius: 5px; margin: 0 15px 15px 0;}
 .sobre p {text-align: justify;}
+
+/* SIDEBAR */
+.onde-estamos {width: 30%; float: right; padding: 10px 20px; background-color:#f5f5f5; border-radius: 5px;}
+.onde-estamos h2 {margin-bottom: 5px;}
+.onde-estamos iframe {width: 100%; height: 250px; margin: 20px 0;}
+.onde-estamos li {color: #777; margin-bottom: 10px;}
+.onde-estamos i {margin-right: 5px;}
+
+/* NEWSLETTER*/
+.newsletter {width: 100%; float: left; background-color: #111; padding:50px 8px;}
+.newsletter h3 {font-size: 1.8em; color: #fff;}
+.newsletter p {font-size: 1.2em; color: #fff;}
+.newsletter form {width: 100%; float: left; margin-top: 10px;}
+.newsletter form input {width: 40%; margin-right: 1%; padding: 15px 10px; border: 1px solid #fff; border-radius: 5px; color: #fff; background-color: initial; float: left;}
+.newsletter button {width: 18%; background-color: #fff; padding: 15px 10px; border-radius: 5px; float: right; cursor: pointer;}
